# screenshare

./: .gitignore  README.md
consumer/: index.html  screenshare.js
producer/: Cargo.toml  ffmpeg.cfg
producer/src/: h264.rs  main.rs  message.rs
signaling/: pom.xml
signaling/answer/: pom.xml
signaling/answer/src/main/java/se/_2a/screenshare/: AnswerHandler.java
signaling/candidate/: pom.xml
signaling/candidate/src/main/java/se/_2a/screenshare/: CandidateHandler.java
signaling/common/: pom.xml
signaling/common/src/main/java/se/_2a/screenshare/: Constants.java  DynamoDbConnection.java  ResponseUtil.java
signaling/connect/: pom.xml
signaling/connect/src/main/java/se/_2a/screenshare/: ConnectHandler.java
signaling/default/: pom.xml
signaling/default/src/main/java/se/_2a/screenshare/: DefaultHandler.java
signaling/disconnect/: pom.xml
signaling/disconnect/src/main/java/se/_2a/screenshare/: DisconnectHandler.java
signaling/offer/: pom.xml
signaling/offer/src/main/java/se/_2a/screenshare/: OfferHandler.java
signaling/terraform/: .terraform.lock.hcl  main.tf  terraform.tf
