[package]
name = "screenshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.17.1", features = ["tokio-runtime", "tokio-native-tls"] }
bytes = "1.1.0"
clap = "3.0.4"
event-listener = "2.5.2"
futures-util = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tokio-native-tls = "0.3.0"
webrtc = "0.4.0"
